# SiegeBot

./: pyproject.toml  requirements.txt
ChatPal/: package-lock.json  package.json  replit.md
ChatPal/client/: index.html
ChatPal/client/src/: index.css
ChatPal/server/: routes.ts  storage.ts
ChatPal/shared/: schema.ts
MyTeleBot/: bot.py  cohere_client.py  config.py  main.py  models.py  personality.py  pyproject.toml  requirements.txt  telegram_bot.py
MyTeleBot/attached_assets/: Pasted-i-want-to-make-a-telegram-bot-i-want-it-to-be-a-chat-bot-that-answers-questions-and-replies-to-th-1755144730069_1755144730070.txt
SiegeChatbot/: bot.py  config.py  main.py  pyproject.toml  replit.md  requirements.txt  siege_bot.py  telegram_integration.py
SiegeChatbot/attached_assets/: Pasted-it-has-to-have-the-personality-of-a-crazy-woman-like-harley-quinn-from-dc-batman-but-also-she-has-t-1754955889581_1754955889581.txt
TelegramMind/: app.py  process_messages.py  replit.md  requirements.txt  utils.py
TelegramMind/instance/: siege_bot.db
TelegramMind/static/: style.css
TelegramMind/templates/: index.html
TelegramSeige/: .env  .env.example  .replit  README.md  bot.py  botinfo.md  config.py  main.py  personality.py  pyproject.toml  replit.md
TelegramSeige/attached_assets/: Pasted--she-will-reply-to-users-in-chat-when-they-either-reply-to-her-message-or-address-her-with-a-questi-1755030132066_1755030132066.txt  Pasted--the-bot-on-telegrams-is-Siege-Chat-Bot-and-her-name-is-Siege-start-and-help-need-to-be-work-1755031245822_1755031245823.txt
(+8 files in other folders)
